# SmallRustProjects

./: Cargo.toml  README.md
AAsimple_test/src/: main.rs
Design_patterns/: Cargo.toml
TLS_examples/: Cargo.toml
candle/: Cargo.toml
crypto/: Cargo.toml
crypto/src/: main.rs
default-value/src/: main.rs
ffi_c_rust2/: Cargo.toml
grpc-demo-tonic/: Cargo.toml
grpc-demo-tonic/proto/: hello.proto
grpc-demo-tonic/src/: hello.rs  hello_grpc.rs
lifetime/src/: main.rs
passwordManager/: Cargo.toml
passwordManager/src/: main.rs
rust-stat-dyn/: Cargo.toml
rust-stat-dyn/dynamic_dispatch/src/: main.rs
rust-stat-dyn/src/: main.rs
rust-stat-dyn/static_dispatch/src/: main.rs
rustlib/maths/src/: add_two_num.rs  lib.rs  sub_two_num.rs
rustlib/uselib/: Cargo.toml
rustlib/uselib/src/: main.rs
send_sync_trait/: Cargo.toml
send_sync_trait/src/: main.rs
simple_cli_ser/: Cargo.toml  TLS1.3.pcapng  tcp_localhost_serv_cli.pcapng
size-of-struct-enum/: Cargo.toml
size-of-struct-enum/src/: main.rs
static_lifetime/src/: main.rs  s.rs
super1/: Cargo.toml
super1/src/: main.rs
super1/src/utils/: helper.rs
type_state_programming/: Cargo.toml
type_state_programming/src/: generic_typestate.rs  main.rs  shiping_chain.rs  typestate1.rs
