[workspace]
members = ["rustlib",
           "rustlib/maths",
           "rustlib/uselib",
           "rust-stat-dyn",
           #"rust-stat-dyn/dynamic_dispatch",
           #"rust-stat-dyn/static_dispatch",
           "size-of-struct-enum",
           "lifetime",
           "super1",
           "static_lifetime",
           "type_state_programming"

    # ... add more crate paths as needed 
    , "lifetime", "super1", "static_lifetime", "send_sync_trait", "type_state_programming"]
resolver = "2"
