[workspace]
members = ["rustlib",
           "rustlib/maths",
           "rustlib/uselib",
           "rust-stat-dyn",
           #"rust-stat-dyn/dynamic_dispatch",
           #"rust-stat-dyn/static_dispatch",
           "size-of-struct-enum",
           "lifetime",
           "super1",
           "static_lifetime",
           "type_state_programming",
           "grpc-demo-tonic",
           "lifetime",
           "super1",
           "static_lifetime",
           "send_sync_trait",
           "type_state_programming", 
           "simple_cli_ser",
           "TLS_examples", 
           "Design_patterns",
           "default-value"]

resolver = "2"
